# hAIrcut-backend

./: .gitignore  aerich.ini  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml  readme.md
data/: hairrag.pdf:Zone.Identifier
migrations/models/: 0_20251014163032_init.py
src/: config.py  main.py  models.py  rag_builder.py  routers.py  schemas.py  tests.py  utils.py  validator.py
