[project]
name = "hAIrcut-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "user.name: kauabarros-25", email = "user.mail: martinsbarroskaua@gmail.com"},
]
dependencies = ["google-generativeai>=0.8.5", "langchain-google-genai>=2.0.10", "langchain>=0.3.27", "pydantic>=2.12.0", "python-dotenv>=1.1.1", "dotenv>=0.9.9", "faiss-cpu>=1.12.0", "pypdf>=6.1.1", "langchain-community>=0.3.31", "reportlab>=4.4.4", "sqlalchemy>=2.0.44", "tortoise>=0.1.1", "tortoise-orm>=0.25.1", "email-validator>=2.3.0", "passlib>=1.7.4", "phonenumbers>=9.0.16", "aerich>=0.9.2", "fastapi>=0.119.0", "uvicorn>=0.37.0", "python-jose>=3.5.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
rag = "python -m src.rag_builder"
init_aerich = "aerich init -t src.config.TORTOISE_ORM"
init_db = "aerich init-db"
makemigrations = "aerich migrate"
migrate = "aerich upgrade"
dev = "uvicorn src.main:app --reload"


[tool.aerich]

tortoise_orm = "src.config.TORTOISE_ORM"

location = "./migrations"

src_folder = "./."

